fixed overflow issue of user information board display

--- a/supportland/css/style.css
+++ b/supportland/css/style.css
@@ -131,10 +131,10 @@
     border-radius: 5px 5px 5px 5px;
     display: block;
     margin: 0;
-    padding: 3px;
+    padding: 5px;
     position: relative;
     text-decoration: none;
-    width: 95%;
+    width: 90%;
     z-index: 99;
     background: none repeat scroll 0 0 #F5F5F5;
     border: 1px solid #F5F5F5;
@@ -143,48 +143,37 @@
     cursor: text;
 }
 
-/* left column of user info card */
-#sp_user_points_area {
-    vertical-align: bottom; 
-    line-height: 12px;
-    width: 55px;
-    padding-top: 15px;
+#sp_point_area {
+    display: block;
+    height: 50px;
 }
 
 /* user point label */
-#sp_user_points_area label {
-    float: left;
-    font: bold 45px Verdana,Arial,Helvetica,sans-serif;
+#sp_user_point_label {
+    font: bold 37px Verdana,Arial,Helvetica,sans-serif;
     padding: 0 5px;
+    float: left;
+    width: 50%;
+    position: relative;
+}
+
+#sp_user_info_etc {
+    display: block;
+    padding-top: 15px;
     position: relative;
     text-align: left;
-    width: 30px;
 }
 
-#sp_user_points_area span {
-    margin-left: 38px; 
-    float: left;
-}
-
-/* right column of user info card */
-#sp_user_info_area {
-    font-size: 10px; 
-    vertical-align: top;
-    text-align: right;
+#sp_user_point_marker {
+    display: block;
+    margin-left: 33%;
 }
 
 /* user name tag */
 #sp_user_name {
     font: bold 16px Verdana,Arial,Helvetica,sans-serif;
-    padding: 5px 0;
-}
-
-#sp_user_id {
-    font-size: 10px;
-}
-
-#sp_user_since {
-    font-size: 8px;
+    display: block;
+    text-align: right;
 }
 
 .sp_punch_card_display {
